--- a/documentation/api/api-poi.yaml
+++ b/documentation/api/api-poi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
-  title: POI REST API
-  description: This document specifies the REST API for PoI (Proof of Inclusion) in Chronicle.
+  title: Chronicle Proof-of-Inclusion (PoI) REST API
+  description: This document specifies the REST API for Proof-of-Inclusion (PoI) in Chronicle.
   contact:
     email: contact@iota.org
   license:
@@ -12,7 +12,7 @@ externalDocs:
   description: Find out more about IOTA
   url: https://iota.org
 servers:
-  - url: http://127.0.0.1:8042
+  - url: http://localhost:8042
 tags:
   - name: create
     description: Proof-of-Inclusion creation.
@@ -228,6 +228,98 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalErrorResponse'
 components:
+  schemas:
+    ErrorResponse:
+      description: The error format.
+      properties:
+        error:
+          type: object
+          properties:
+            code:
+              type: string
+              description: The application error code.
+            message:
+              type: string
+              description: The error reason.
+          required:
+            - code
+            - message
+      required:
+        - error
+    ForbiddenResponse:
+      description: Indicates that this endpoint is not available for public use.
+      allOf:
+        - $ref: '#/components/schemas/ErrorResponse'
+      example:
+        error:
+          code: 403
+          message: not available for public use
+    BadRequestResponse:
+      description: Indicates that the request was bad.
+      allOf:
+        - $ref: '#/components/schemas/ErrorResponse'
+      example:
+        error:
+          code: 400
+          message: invalid data provided
+    NotFoundResponse:
+      description: Indicates that the data was not found.
+      allOf:
+        - $ref: '#/components/schemas/ErrorResponse'
+      example:
+        error:
+          code: 404
+          message: could not find data
+    InternalErrorResponse:
+      description: >-
+        Indicates that the server encountered an unexpected condition, which
+        prevented it from fulfilling the request by the client.
+      allOf:
+        - $ref: '#/components/schemas/ErrorResponse'
+      example:
+        error:
+          code: 500
+          message: internal server error
+    
+    ProofHashLeaf:
+      description: A leaf including a hash.
+      properties:
+        h:
+          type: string
+    ProofValueLeaf:
+      description: A leaf including a blockId.
+      properties:
+        value:
+          type: string
+    ProofNode:
+      description: A node in the merkle tree.
+      properties:
+        l:
+          oneOf:
+            - $ref: '#/components/schemas/ProofNode'
+            - $ref: '#/components/schemas/ProofHashLeaf'
+            - $ref: '#/components/schemas/ProofValueLeaf'
+        r:
+          oneOf:
+            - $ref: '#/components/schemas/ProofNode'
+            - $ref: '#/components/schemas/ProofHashLeaf'
+            - $ref: '#/components/schemas/ProofValueLeaf'
+    Proof:
+      description: The proof of inclusion of a block.
+      properties:
+        milestone:
+          allOf:
+            - $ref: "https://raw.githubusercontent.com/iotaledger/tips/main/tips/TIP-0025/core-rest-api.yaml#/components/schemas/MilestonePayload"
+        block:
+          allOf:
+            - $ref: "https://raw.githubusercontent.com/iotaledger/tips/main/tips/TIP-0025/core-rest-api.yaml#/components/schemas/Block"
+        proof:
+          allOf:
+            - $ref: '#/components/schemas/ProofNode'
+    ValidateResponse:
+      properties:
+        valid:
+          type: boolean
   examples:
     get-proof-block-by-id-response-example:
       value:
@@ -295,94 +387,3 @@ components:
     post-validate-response:
       value:
         valid: true
-  schemas:
-    ErrorResponse:
-      description: The error format.
-      properties:
-        error:
-          type: object
-          properties:
-            code:
-              type: string
-              description: The application error code.
-            message:
-              type: string
-              description: The error reason.
-          required:
-            - code
-            - message
-      required:
-        - error
-    ForbiddenResponse:
-      description: Indicates that this endpoint is not available for public use.
-      allOf:
-        - $ref: '#/components/schemas/ErrorResponse'
-      example:
-        error:
-          code: 403
-          message: not available for public use
-    BadRequestResponse:
-      description: Indicates that the request was bad.
-      allOf:
-        - $ref: '#/components/schemas/ErrorResponse'
-      example:
-        error:
-          code: 400
-          message: invalid data provided
-    NotFoundResponse:
-      description: Indicates that the data was not found.
-      allOf:
-        - $ref: '#/components/schemas/ErrorResponse'
-      example:
-        error:
-          code: 404
-          message: could not find data
-    InternalErrorResponse:
-      description: >-
-        Indicates that the server encountered an unexpected condition, which
-        prevented it from fulfilling the request by the client.
-      allOf:
-        - $ref: '#/components/schemas/ErrorResponse'
-      example:
-        error:
-          code: 500
-          message: internal server error
-    ProofHashLeaf:
-      description: A leaf including a hash.
-      properties:
-        h:
-          type: string
-    ProofValueLeaf:
-      description: A leaf including a blockId.
-      properties:
-        value:
-          type: string
-    ProofNode:
-      description: A node in the merkle tree.
-      properties:
-        l:
-          oneOf:
-            - $ref: '#/components/schemas/ProofNode'
-            - $ref: '#/components/schemas/ProofHashLeaf'
-            - $ref: '#/components/schemas/ProofValueLeaf'
-        r:
-          oneOf:
-            - $ref: '#/components/schemas/ProofNode'
-            - $ref: '#/components/schemas/ProofHashLeaf'
-            - $ref: '#/components/schemas/ProofValueLeaf'
-    Proof:
-      description: The proof proving the inclusion of a block.
-      properties:
-        milestone:
-          description: Milestone payload in JSON representation. See Core API.
-          type: object
-        block:
-          description: Block in JSON representation. See Core API.
-          type: object
-        proof:
-          allOf:
-            - $ref: '#/components/schemas/ProofNode'
-    ValidateResponse:
-      properties:
-        valid:
-          type: boolean
