--- a/config.template.toml
+++ b/config.template.toml
@@ -8,7 +8,7 @@ password = "root"
 
 ### Chronicle allows different database names, so multiple 
 ### networks can run within the same MongoDB instance.
-database_name = "chronicle"
+database_name = "chronicle_beta_25"
 
 ### The minimum amount of connections in the pool.
 min_pool_size = 2
