--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,8 +18,6 @@ services:
     depends_on:
       influx:
         condition: service_started
-      mongo:
-        condition: service_started
       hornet:
         condition: service_healthy
     build:
@@ -31,9 +29,7 @@ services:
       - "9100:9100/tcp" # Metrics
     tty: true
     command:
-      - "--mongodb-conn-str=mongodb://mongo:27017"
-      - "--mongodb-username=${MONGODB_USERNAME}"
-      - "--mongodb-password=${MONGODB_PASSWORD}"
+      - "--mongodb-conn-str=${MONGODB_CONN_STR}"
       - "--influxdb-url=http://influx:8086"
       - "--influxdb-username=${INFLUXDB_USERNAME}"
       - "--influxdb-password=${INFLUXDB_PASSWORD}"
